--- a/index.html
+++ b/index.html
@@ -390,7 +390,8 @@
 
       <footer>
         <span>© <span id="year"></span> Nmbli. All rights reserved.</span>
-        <a href="mailto:hello@nmbli.com">hello@nmbli.com</a>
+        <span>Based in San Francisco · Working with buyers nationwide.</span>
+        <a href="mailto:contact@nmbli.com">contact@nmbli.com</a>
       </footer>
     </div>
 
@@ -438,7 +439,7 @@
           } catch (error) {
             console.error(error);
             status.textContent =
-              'Something went wrong. Email hello@nmbli.com and we will get you on the list.';
+              'Something went wrong. Email contact@nmbli.com and we will get you on the list.';
             status.className = 'status error';
           }
         });
